# keynesis

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci_checks.yml
keynesis/: Cargo.toml  README.md
keynesis-core/: Cargo.toml  README.md
keynesis-core/ref/IK.noise.rs/: Cargo.toml
keynesis-core/ref/IK.noise.rs/src/: lib.rs  state.rs  types.rs
keynesis-core/src/: memsec.rs
keynesis-core/src/key/: curve25519.rs  ed25519.rs  ed25519_extended.rs  ed25519_hd.rs  mod.rs  shared_secret.rs
keynesis-core/src/noise/: cipher_state.rs  symmetric_state.rs  transport_state.rs
keynesis-core/src/noise/pattern/: ix.rs  n.rs  x.rs  xx.rs
keynesis-core/tests/: keynesis.rs  ref_keynesis.rs
keynesis-network/: Cargo.toml  README.md  deny.toml
keynesis-network/.github/: dependabot.yml
keynesis-network/.github/workflows/: rust-audit.yaml  rust.yml
keynesis-network/src/: accept.rs  handle.rs  lib.rs  net.rs  opening.rs  version.rs
keynesis-network/src/codec/: encryption.rs  handshake.rs
keynesis/src/: lib.rs
ref/IK.noise.rs/: Cargo.toml
ref/IK.noise.rs/src/: consts.rs  error.rs  prims.rs  types.rs
src/: buffer.rs  lib.rs  memsec.rs  seed.rs
src/hash/: mod.rs
src/key/: curve25519.rs  ed25519.rs  ed25519_extended.rs  ed25519_hd.rs  mod.rs  shared_secret.rs
src/key/enclave/: macos.rs  mod.rs
src/noise/: cipher_state.rs  handshake_state.rs  mod.rs  symmetric_state.rs  transport_state.rs
src/noise/pattern/: ik.rs  ix.rs  mod.rs  n.rs  x.rs  xx.rs
src/passport/: blocks.rs  builder.rs  mod.rs
src/passport/block/: content.rs  hash.rs  header.rs  mod.rs  previous.rs  time.rs  version.rs
src/passport/block/entry/: deregister_master_key.rs  mod.rs  register_master_key.rs  shared_key.rs
src/passport/ledger/: mod.rs
tests/: keynesis.rs  ref_keynesis.rs  snow.rs
