[package]
name = "keynesis"
version = "1.0.1"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primetype/keynesis"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "cryptoxide", "ed25519", "curve25519"]
description = "General purpose key management and associated cryptographic protocols"
exclude = [
    ".gitignore",
]

[features]
nightly = []

[dependencies]
cryptoxide = "0.2.1"
thiserror = "1.0.22"
hex = "0.4.2"
rand_core = "0.5.1"
rand_chacha = "0.2.2"

[dev-dependencies]
rand = "0.7.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
chrono = "0.4.19"

hacl-star = "0.1.0"
snow = { version = "0.7.2" }
noiseexplorer_ik = { path = "ref/IK.noise.rs" }
