[package]
name = "keynesis"
version = "2.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primetype/keynesis"
documentation = "https://docs.rs/keynesis"
homepage = "https://github.com/primetype/keynesis"
categories = ["cryptography"]
keywords = ["crypto", "cryptoxide", "ed25519", "curve25519", "noise"]
description = "General purpose key management and associated cryptographic protocols"
exclude = [
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keynesis-core = { version = "1.0", path = "../keynesis-core" }
